--- a/views/home.html
+++ b/views/home.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    rel="stylesheet" />
     <title>Document</title>
 </head>
-<body>
-    <header>
-        <img src="/images/logo-mercado-liebre.svg" alt="logo">
-        <input>
+<body class="container">
+    <header class="nav-bar">
+        <img src="/images/logo-mercado-liebre.svg" alt="logo" class="navbar-logo">
+        <input class="navbar-input">
         <p>Compra en cuotas y sin tarjeta de credito</p>
         <ul>
             <li>Ofertas</li>
@@ -24,57 +30,57 @@
     </header>
     <main>
         <section>
-            <h2>Basado en tu ultima visita</h2>
+            <h2 class="titulares">Basado en tu ultima visita</h2>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-                <p>$6.770</p>
-                <p>40% off</p>
-                <h3>Cafetera Moulinex</h3>
+                <p class="precios">$6.770</p>
+                <p class="descuentos">40% off</p>
+                <p class="descripcion">Cafetera Moulinex</p>
             </article>
             <article>
                 <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
-                <p>$230.000</p>
-                <p>20% off</p>
-                <h3>MacBook Pro 2019</h3>
+                <p class="precios">$230.000</p>
+                <p class="descuentos">20% off</p>
+                <p class="descripcion">MacBook Pro 2019</p>
             </article>
             <article>
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
-                <p>$70.500</p>
-                <p>10% off</p>
-                <h3>Samsung Galaxy s10</h3>
+                <p class="precios">$70.500</p>
+                <p class="descuentos">10% off</p>
+                <p class="descripcion">Samsung Galaxy s10</p>
             </article>
             <article>
                 <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
-                <p>$23.200</p>
-                <p>5% off</p>
-                <h3>SmartTv Samsung 43</h3>
+                <p class="precios">$23.200</p>
+                <p class="descuentos">5% off</p>
+                <p class="descripcion">SmartTv Samsung 43</p>
             </article>
         </section>
         <section>
-            <h2>Seccion de ofertas</h2>
+            <h2 class="titulares">Seccion de ofertas</h2>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-                <p>$6.770</p>
-                <p>40% off</p>
-                <h3>Cafetera Moulinex</h3>
+                <p class="precios">$6.770</p>
+                <p class="descuentos">40% off</p>
+                <p class="descripcion">Cafetera Moulinex</p>
             </article>
             <article>
                 <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
-                <p>$230.000</p>
-                <p>20% off</p>
-                <h3>MacBook Pro 2019</h3>
+                <p class="precios">$230.000</p>
+                <p class="descuentos">20% off</p>
+                <p class="descripcion">MacBook Pro 2019</p>
             </article>
             <article>
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
-                <p>$70.500</p>
-                <p>10% off</p>
-                <h3>Samsung Galaxy s10</h3>
+                <p class="precios">$70.500</p>
+                <p class="descuentos">10% off</p>
+                <p class="descripcion">Samsung Galaxy s10</p>
             </article>
             <article>
                 <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
-                <p>$23.200</p>
-                <p>5% off</p>
-                <h3>SmartTv Samsung 43</h3>
+                <p class="precios">$23.200</p>
+                <p class="descuentos">5% off</p>
+                <p class="descripcion">SmartTv Samsung 43</p>
             </article>
         </section>
     </main>
