--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,25 @@
 }
 
 .nav-bar {
+    padding: 5px;
+    margin-bottom: 5px;
     background-color: #EAC926;
+}
+
+.nav-bar .logo {
+    width: 50%;
+}
+
+.burger-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.fa-bars {
+    padding: 10px;
+    background-color: #1259c3;
+    border-radius: 5px;
 }
 
 .titulares {
@@ -20,4 +38,35 @@
 
 .descripcion {
     font-size: 16px;
+}
+
+.products {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    padding: 5px;
+}
+
+.product-wrapper {
+    border: 1px solid red;
+    padding: 5px;
+}
+
+.product-wrapper img {
+    max-width: 100%;
+}
+
+.footer-content {
+    text-align: center;
+    margin: 20px 0px 20px 0px;
+}
+
+.footer-content h3 {
+    margin-bottom: -15px;
+    margin-top: 0px;
+}
+
+.footer-icon {
+    font-size: 2em;
+    margin-bottom: 10px;
 }
