--- a/views/home.html
+++ b/views/home.html
@@ -14,88 +14,126 @@
 </head>
 <body class="container">
     <header class="nav-bar">
-        <img src="/images/logo-mercado-liebre.svg" alt="logo" class="navbar-logo">
-        <input class="navbar-input">
-        <p>Compra en cuotas y sin tarjeta de credito</p>
+        <img src="/images/logo-mercado-liebre.svg" alt="logo" class="logo">
+        <input class="navbar-input" placeholder="Buscar productos, marcas">
+        <button>
+            <i class="fas fa-search"></i>
+        </button>
+        <p>
+            <i class="fas fa-hand-holding-usd"></i>
+            Compra en cuotas y sin tarjeta de credito
+        </p>
         <ul>
             <li>Ofertas</li>
             <li>Tiendas Oficiales</li>
             <li>Vender</li>
             <li>Ayuda</li>
             <li></li>
-            <li>Creá tu cuenta</li>
-            <li>Ingresa</li>
-            <li>Mis Compras</li>
+            <li>Creá tu cuenta
+                <i class="far fa-id-card"></i>
+            </li>
+            <li>Ingresa
+                <i class="fas fa-sign-in-alt"></i>
+            </li>
+            <li>Mis Compras
+                <i class="fas fa-shopping-basket"></i>
+            </li>
         </ul>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </div>
     </header>
     <main>
         <section>
-            <h2 class="titulares">Basado en tu ultima visita</h2>
-            <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-                <p class="precios">$6.770</p>
-                <p class="descuentos">40% off</p>
-                <p class="descripcion">Cafetera Moulinex</p>
-            </article>
-            <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
-                <p class="precios">$230.000</p>
-                <p class="descuentos">20% off</p>
-                <p class="descripcion">MacBook Pro 2019</p>
-            </article>
-            <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
-                <p class="precios">$70.500</p>
-                <p class="descuentos">10% off</p>
-                <p class="descripcion">Samsung Galaxy s10</p>
-            </article>
-            <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
-                <p class="precios">$23.200</p>
-                <p class="descuentos">5% off</p>
-                <p class="descripcion">SmartTv Samsung 43</p>
-            </article>
+            <div class="products">
+                <h2 class="titulares">Basado en tu ultima visita</h2>
+                <div class="product-wrapper">
+                    <article>
+                        <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
+                        <p class="precios">$6.770</p>
+                        <p class="descuentos">40% off</p>
+                        <p class="descripcion">Cafetera Moulinex</p>
+                    </article>
+                </div>
+                <div class="product-wrapper">
+                    <article>
+                        <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
+                        <p class="precios">$230.000</p>
+                        <p class="descuentos">20% off</p>
+                        <p class="descripcion">MacBook Pro 2019</p>
+                    </article>
+                </div>
+                <div class="product-wrapper">
+                    <article>
+                        <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
+                        <p class="precios">$70.500</p>
+                        <p class="descuentos">10% off</p>
+                        <p class="descripcion">Samsung Galaxy s10</p>
+                    </article>
+                </div>
+                <div class="product-wrapper">
+                    <article>
+                        <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
+                        <p class="precios">$23.200</p>
+                        <p class="descuentos">5% off</p>
+                        <p class="descripcion">SmartTv Samsung 43</p>
+                    </article>
+                </div>
+            </div>
         </section>
         <section>
-            <h2 class="titulares">Seccion de ofertas</h2>
-            <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-                <p class="precios">$6.770</p>
-                <p class="descuentos">40% off</p>
-                <p class="descripcion">Cafetera Moulinex</p>
-            </article>
-            <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
-                <p class="precios">$230.000</p>
-                <p class="descuentos">20% off</p>
-                <p class="descripcion">MacBook Pro 2019</p>
-            </article>
-            <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
-                <p class="precios">$70.500</p>
-                <p class="descuentos">10% off</p>
-                <p class="descripcion">Samsung Galaxy s10</p>
-            </article>
-            <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
-                <p class="precios">$23.200</p>
-                <p class="descuentos">5% off</p>
-                <p class="descripcion">SmartTv Samsung 43</p>
-            </article>
+            <div class="products">
+                <h2 class="titulares">Seccion de ofertas</h2>
+                <div class="product-wrapper">
+                    <article>
+                        <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
+                        <p class="precios">$6.770</p>
+                        <p class="descuentos">40% off</p>
+                        <p class="descripcion">Cafetera Moulinex</p>
+                    </article>
+                </div>
+                <div class="product-wrapper">
+                    <article>
+                        <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
+                        <p class="precios">$230.000</p>
+                        <p class="descuentos">20% off</p>
+                        <p class="descripcion">MacBook Pro 2019</p>
+                    </article>
+                </div>
+                <div class="product-wrapper">
+                    <article>
+                        <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
+                        <p class="precios">$70.500</p>
+                        <p class="descuentos">10% off</p>
+                        <p class="descripcion">Samsung Galaxy s10</p>
+                    </article>
+                </div>
+                <div class="product-wrapper">
+                    <article>
+                        <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
+                        <p class="precios">$23.200</p>
+                        <p class="descuentos">5% off</p>
+                        <p class="descripcion">SmartTv Samsung 43</p>
+                    </article>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
-        <section>
+        <section class="footer-content">
+            <i class="fas fa-credit-card footer-icon"></i>
             <h3>Pagá con tarjeta o en efectivo</h3>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </section>
-        <section>
+        <section class="footer-content">
+            <i class="fas fa-gift footer-icon"></i>
             <h3>Envío gratis desde $ 3.500</h3>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </section>
-        <section>
+        <section class="footer-content">
+            <i class="fas fa-user-shield footer-icon"></i>
             <h3>Seguridad, de principio a fin</h3>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
