Retoque en mensaje de express. Retoque de estilos

--- a/views/home.html
+++ b/views/home.html
@@ -28,7 +28,7 @@
             <li>Tiendas Oficiales</li>
             <li>Vender</li>
             <li>Ayuda</li>
-            <li></li>
+            <div class="div-separador"></div>
             <li>Creá tu cuenta
                 <i class="far fa-id-card"></i>
             </li>
