--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 .container {
     font-family: 'Roboto', sans-serif;
+    margin: 0px;
 }
 
 .nav-bar {
@@ -10,6 +11,14 @@
 
 .nav-bar .logo {
     width: 50%;
+}
+
+.nav-bar p {
+    text-align: center;
+}
+
+.div-separador {
+    min-height: 19px;
 }
 
 .burger-menu {
