--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,6 @@
 
 .nav-bar {
     padding: 5px;
-    margin-bottom: 5px;
     background-color: #EAC926;
 }
 
@@ -33,6 +32,14 @@
     border-radius: 5px;
 }
 
+.banner {
+    width: 100%;
+}
+
+.main-content {
+    padding: 0 5%;
+}
+
 .titulares {
     font-size: 24px;
 }
@@ -52,17 +59,28 @@
 .products {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
-    padding: 5px;
 }
 
 .product-wrapper {
-    border: 1px solid red;
-    padding: 5px;
+    margin: 5px 0;
+    box-shadow: 0px 0px 10px 0px rgb(100, 100, 100);
 }
 
 .product-wrapper img {
     max-width: 100%;
+}
+
+.product-info {
+    border-top: 1px solid #ebebeb;
+    padding: 15px;
+}
+
+.product-info .descripcion {
+    display: none;
+}
+
+.footer-wrapper {
+    padding: 10px;
 }
 
 .footer-content {
@@ -78,4 +96,14 @@
 .footer-icon {
     font-size: 2em;
     margin-bottom: 10px;
+}
+
+.truck-icon {
+    font-size: 16px;
+    padding: 5px;
+    display: block;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #39b54a;
+    border-radius: 50%;
 }
