--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,3 @@
-.container {
-    font-family: 'Roboto', sans-serif;
-    margin: 0px;
-}
-
 .nav-bar {
     padding: 5px;
     background-color: #EAC926;
@@ -63,7 +58,7 @@
 
 .product-wrapper {
     margin: 5px 0;
-    box-shadow: 0px 0px 10px 0px rgb(100, 100, 100);
+    background-color: white;
 }
 
 .product-wrapper img {
