--- a/views/home.html
+++ b/views/home.html
@@ -29,22 +29,23 @@
     rel="stylesheet" />
     <title>Document</title>
 </head>
-<body class="container">
+<body class="ml-light-bg">
     <header class="nav-bar">
         <img src="/images/logo-mercado-liebre.svg" alt="logo" class="logo">
-        <input class="navbar-input" placeholder="Buscar productos, marcas">
-        <button>
-            <i class="fas fa-search"></i>
-        </button>
-        <p class="text-center w-100 w-33-sm">
+        <div>
+            <input class="navbar-input" placeholder="Buscar productos, marcas">
+            <button>
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
+        <p class="text-center w-100">
             <i class="fas fa-hand-holding-usd"></i>
             Compra en cuotas y sin tarjeta de credito
         </p>
         <nav
-                id="ml-main-nav"
-                class="hide flex show-sm justify-space-between"
+                class="hide show-sm"
             >
-                <ul class="flex">
+                <ul>
                     <li class="padding-8">
                         <a href="#">Ofertas</a>
                     </li>
@@ -58,7 +59,7 @@
                         <a href="#">Ayuda</a>
                     </li>
                 </ul>
-                <ul class="flex">
+                <ul>
                     <li class="padding-8">
                         <a href="#"
                             >Creá tu cuenta <i class="far fa-id-card"></i
@@ -76,7 +77,7 @@
                     </li>
                 </ul>
             </nav>
-        <div class="burger-menu">
+        <div class="burger-menu ml-light-text">
             <i class="fas fa-bars"></i>
         </div>
     </header>
