--- a/views/home.html
+++ b/views/home.html
@@ -94,9 +94,11 @@
                     <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
                     <div class="product-info">
                         <i class="fas fa-truck ml-green-text truck-icon"></i>
-                        <p class="precios">$6.770</p>
-                        <p class="descuentos">40% off</p>
-                        <p class="descripcion">Cafetera Moulinex</p>
+                        <div class="flex align-center">
+                            <p class="precios">$6.770</p>
+                            <p class="descuentos ml-green-text">40% off</p>
+                        </div>
+                        <p class="descripcion ml-dark-text">Cafetera Moulinex</p>
                     </div>
                 </article>
             </div>
@@ -105,9 +107,11 @@
                     <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
                     <div class="product-info">
                         <i class="fas fa-truck ml-green-text truck-icon"></i>
-                        <p class="precios">$230.000</p>
-                        <p class="descuentos">20% off</p>
-                        <p class="descripcion">MacBook Pro 2019</p>
+                        <div class="flex align-center">
+                            <p class="precios">$230.000</p>
+                            <p class="descuentos ml-green-text">20% off</p>
+                        </div>
+                        <p class="descripcion ml-dark-text">MacBook Pro 2019</p>
                     </div>
                 </article>
             </div>
@@ -116,9 +120,11 @@
                     <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
                     <div class="product-info">
                         <i class="fas fa-truck ml-green-text truck-icon"></i>
-                        <p class="precios">$70.500</p>
-                        <p class="descuentos">10% off</p>
-                        <p class="descripcion">Samsung Galaxy s10</p>
+                        <div class="flex align-center">
+                            <p class="precios">$70.500</p>
+                            <p class="descuentos ml-green-text">10% off</p>
+                        </div>
+                        <p class="descripcion ml-dark-text">Samsung Galaxy s10</p>
                     </div>
                 </article>
             </div>
@@ -127,9 +133,11 @@
                     <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
                     <div class="product-info">
                         <i class="fas fa-truck ml-green-text truck-icon"></i>
-                        <p class="precios">$23.200</p>
-                        <p class="descuentos">5% off</p>
-                        <p class="descripcion">SmartTv Samsung 43</p>
+                        <div class="flex align-center">
+                            <p class="precios">$23.200</p>
+                            <p class="descuentos ml-green-text">5% off</p>
+                        </div>
+                        <p class="descripcion ml-dark-text">SmartTv Samsung 43</p>
                     </div>
                 </article>
             </div>
