Termina micro desafio 2 - practica Flexbox

--- a/views/home.html
+++ b/views/home.html
@@ -87,57 +87,59 @@
         alt="En estas fiestas no te pierdas ninguna venta"
     />
     <main class="main-content">
-        <h2 class="titulares">Basado en tu ultima visita</h2>
-        <section class="products"> 
-            <div class="product-wrapper">
-                <article>
-                    <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
-                    <div class="product-info">
-                        <i class="fas fa-truck ml-green-text truck-icon"></i>
-                        <div class="flex align-center">
-                            <p class="precios">$6.770</p>
-                            <p class="descuentos ml-green-text">40% off</p>
+        <section>
+            <h2 class="titulares">Basado en tu ultima visita</h2>
+            <div class="flex"> 
+                <article class="products">
+                    <div class="product-wrapper">
+                        <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
+                        <div class="product-info">
+                            <i class="fas fa-truck ml-green-text truck-icon"></i>
+                            <div class="flex align-center">
+                                <p class="precios">$6.770</p>
+                                <p class="descuentos ml-green-text">40% off</p>
+                            </div>
+                            <p class="descripcion ml-dark-text">Cafetera Moulinex</p>
                         </div>
-                        <p class="descripcion ml-dark-text">Cafetera Moulinex</p>
                     </div>
                 </article>
-            </div>
-            <div class="product-wrapper">
-                <article>
-                    <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
-                    <div class="product-info">
-                        <i class="fas fa-truck ml-green-text truck-icon"></i>
-                        <div class="flex align-center">
-                            <p class="precios">$230.000</p>
-                            <p class="descuentos ml-green-text">20% off</p>
+                <article class="products">
+                    <div class="product-wrapper">
+                        <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
+                        <div class="product-info">
+                            <i class="fas fa-truck ml-green-text truck-icon"></i>
+                            <div class="flex align-center">
+                                <p class="precios">$230.000</p>
+                                <p class="descuentos ml-green-text">20% off</p>
+                            </div>
+                            <p class="descripcion ml-dark-text">MacBook Pro 2019</p>
                         </div>
-                        <p class="descripcion ml-dark-text">MacBook Pro 2019</p>
                     </div>
                 </article>
-            </div>
-            <div class="product-wrapper">
-                <article>
-                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
-                    <div class="product-info">
-                        <i class="fas fa-truck ml-green-text truck-icon"></i>
-                        <div class="flex align-center">
-                            <p class="precios">$70.500</p>
-                            <p class="descuentos ml-green-text">10% off</p>
+                <article class="products">
+                    <div class="product-wrapper">
+                        <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
+                        <div class="product-info">
+                            <i class="fas fa-truck ml-green-text truck-icon"></i>
+                            <div class="flex align-center">
+                                <p class="precios">$70.500</p>
+                                <p class="descuentos ml-green-text">10% off</p>
+                            </div>
+                            <p class="descripcion ml-dark-text">Samsung Galaxy s10</p>
                         </div>
-                        <p class="descripcion ml-dark-text">Samsung Galaxy s10</p>
                     </div>
                 </article>
-            </div>
-            <div class="product-wrapper">
-                <article>
-                    <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
-                    <div class="product-info">
-                        <i class="fas fa-truck ml-green-text truck-icon"></i>
-                        <div class="flex align-center">
-                            <p class="precios">$23.200</p>
-                            <p class="descuentos ml-green-text">5% off</p>
+                <article class="products">
+                    <div class="product-wrapper">
+                        <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
+                        <div class="product-info">
+                            <i class="fas fa-truck ml-green-text truck-icon"></i>
+                            <div class="flex align-center">
+                                <p class="precios">$23.200</p>
+                                <p class="descuentos ml-green-text">5% off</p>
+                            </div>
+                            <p class="descripcion ml-dark-text">SmartTv Samsung 43</p>
                         </div>
-                        <p class="descripcion ml-dark-text">SmartTv Samsung 43</p>
                     </div>
                 </article>
             </div>
