No se cuales son los cambios

--- a/views/home.html
+++ b/views/home.html
@@ -30,53 +30,55 @@
     <title>Document</title>
 </head>
 <body class="ml-light-bg">
-    <header class="nav-bar">
-        <img src="/images/logo-mercado-liebre.svg" alt="logo" class="logo">
-        <div>
-            <input class="navbar-input" placeholder="Buscar productos, marcas">
-            <button>
-                <i class="fas fa-search"></i>
-            </button>
+    <header class="ml-yellow-bg padding-16">
+        <div class="flex justify-center flex align-center">
+            <img src="/images/logo-mercado-liebre.svg" alt="logo" class="w-50 w-33-sm">
+            <div class="padding-8 w-50 w-33-sm">
+                <div class="flex no-wrap searchbar w-100">
+                    <input class="w-100" placeholder="Buscar productos, marcas">
+                    <button>
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </div>
+            <p class="text-center w-100 w-33-sm">
+                <i class="fas fa-hand-holding-usd"></i>
+                Compra en cuotas y sin tarjeta de credito
+            </p>
         </div>
-        <p class="text-center w-100">
-            <i class="fas fa-hand-holding-usd"></i>
-            Compra en cuotas y sin tarjeta de credito
-        </p>
-        <nav
-                class="hide show-sm"
-            >
-                <ul>
-                    <li class="padding-8">
-                        <a href="#">Ofertas</a>
-                    </li>
-                    <li class="padding-8">
-                        <a href="#">Tiendas Oficiales</a>
-                    </li>
-                    <li class="padding-8">
-                        <a href="#">Vender</a>
-                    </li>
-                    <li class="padding-8">
-                        <a href="#">Ayuda</a>
-                    </li>
-                </ul>
-                <ul>
-                    <li class="padding-8">
-                        <a href="#"
-                            >Creá tu cuenta <i class="far fa-id-card"></i
-                        ></a>
-                    </li>
-                    <li class="padding-8">
-                        <a href="#"
-                            >Ingresá <i class="fas fa-sign-in-alt"></i
-                        ></a>
-                    </li>
-                    <li class="padding-8">
-                        <a href="#"
-                            >Mis compras <i class="fas fa-shopping-basket"></i
-                        ></a>
-                    </li>
-                </ul>
-            </nav>
+        <nav class="hide show-sm">
+            <ul>
+                <li class="padding-8">
+                    <a href="#">Ofertas</a>
+                </li>
+                <li class="padding-8">
+                    <a href="#">Tiendas Oficiales</a>
+                </li>
+                <li class="padding-8">
+                    <a href="#">Vender</a>
+                </li>
+                <li class="padding-8">
+                    <a href="#">Ayuda</a>
+                </li>
+            </ul>
+            <ul>
+                <li class="padding-8">
+                    <a href="#"
+                        >Creá tu cuenta <i class="far fa-id-card"></i>
+                    </a>
+                </li>
+                <li class="padding-8">
+                    <a href="#"
+                        >Ingresá <i class="fas fa-sign-in-alt"></i>
+                    </a>
+                </li>
+                <li class="padding-8">
+                    <a href="#"
+                        >Mis compras <i class="fas fa-shopping-basket"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
         <div class="burger-menu ml-light-text">
             <i class="fas fa-bars"></i>
         </div>
