--- a/views/home.html
+++ b/views/home.html
@@ -32,7 +32,9 @@
 <body class="ml-light-bg">
     <header class="ml-yellow-bg padding-16">
         <div class="flex justify-center flex align-center">
+            <!-- Imagen del logo -->
             <img src="/images/logo-mercado-liebre.svg" alt="logo" class="w-50 w-33-sm">
+            <!-- Barra de busqueda -->
             <div class="padding-8 w-50 w-33-sm">
                 <div class="flex no-wrap searchbar w-100">
                     <input class="w-100" placeholder="Buscar productos, marcas">
@@ -41,48 +43,52 @@
                     </button>
                 </div>
             </div>
+            <!-- Texto del header -->
             <p class="text-center w-100 w-33-sm">
                 <i class="fas fa-hand-holding-usd"></i>
                 Compra en cuotas y sin tarjeta de credito
             </p>
         </div>
-        <nav class="hide show-sm">
-            <ul>
-                <li class="padding-8">
+        <!-- Links del navbar -->
+        <nav class="hide show-sm justify-space-between">
+            <ul class="flex">
+                <li class="nav-item">
                     <a href="#">Ofertas</a>
                 </li>
-                <li class="padding-8">
+                <li class="nav-item">
                     <a href="#">Tiendas Oficiales</a>
                 </li>
-                <li class="padding-8">
+                <li class="nav-item">
                     <a href="#">Vender</a>
                 </li>
-                <li class="padding-8">
+                <li class="nav-item">
                     <a href="#">Ayuda</a>
                 </li>
             </ul>
-            <ul>
-                <li class="padding-8">
+            <ul class="flex">
+                <li class="nav-item">
                     <a href="#"
                         >Creá tu cuenta <i class="far fa-id-card"></i>
                     </a>
                 </li>
-                <li class="padding-8">
+                <li class="nav-item">
                     <a href="#"
                         >Ingresá <i class="fas fa-sign-in-alt"></i>
                     </a>
                 </li>
-                <li class="padding-8">
+                <li class="nav-item">
                     <a href="#"
                         >Mis compras <i class="fas fa-shopping-basket"></i>
                     </a>
                 </li>
             </ul>
         </nav>
+        <!-- Burguer Menu -->
         <div class="burger-menu ml-light-text">
             <i class="fas fa-bars"></i>
         </div>
     </header>
+    <!-- Banner -->
     <img
         class="banner"
         src="/images/img-home-banner.jpg"
@@ -92,6 +98,7 @@
         <section>
             <h2 class="titulares">Basado en tu ultima visita</h2>
             <div class="flex"> 
+                <!-- Contenedor de producto -->
                 <article class="products">
                     <div class="product-wrapper">
                         <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
@@ -105,6 +112,7 @@
                         </div>
                     </div>
                 </article>
+                <!-- Contenedor de producto -->
                 <article class="products">
                     <div class="product-wrapper">
                         <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
@@ -118,6 +126,7 @@
                         </div>
                     </div>
                 </article>
+                <!-- Contenedor de producto -->
                 <article class="products">
                     <div class="product-wrapper">
                         <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
@@ -131,6 +140,68 @@
                         </div>
                     </div>
                 </article>
+                <!-- Contenedor de producto -->
+                <article class="products">
+                    <div class="product-wrapper">
+                        <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
+                        <div class="product-info">
+                            <i class="fas fa-truck ml-green-text truck-icon"></i>
+                            <div class="flex align-center">
+                                <p class="precios">$23.200</p>
+                                <p class="descuentos ml-green-text">5% off</p>
+                            </div>
+                            <p class="descripcion ml-dark-text">SmartTv Samsung 43</p>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <section>
+            <h2 class="titulares">Mas Buscados</h2>
+            <div class="flex"> 
+                <!-- Contenedor de producto -->
+                <article class="products">
+                    <div class="product-wrapper">
+                        <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera">
+                        <div class="product-info">
+                            <i class="fas fa-truck ml-green-text truck-icon"></i>
+                            <div class="flex align-center">
+                                <p class="precios">$6.770</p>
+                                <p class="descuentos ml-green-text">40% off</p>
+                            </div>
+                            <p class="descripcion ml-dark-text">Cafetera Moulinex</p>
+                        </div>
+                    </div>
+                </article>
+                <!-- Contenedor de producto -->
+                <article class="products">
+                    <div class="product-wrapper">
+                        <img src="/images/img-macbook-pro-2019.jpg" alt="macbook">
+                        <div class="product-info">
+                            <i class="fas fa-truck ml-green-text truck-icon"></i>
+                            <div class="flex align-center">
+                                <p class="precios">$230.000</p>
+                                <p class="descuentos ml-green-text">20% off</p>
+                            </div>
+                            <p class="descripcion ml-dark-text">MacBook Pro 2019</p>
+                        </div>
+                    </div>
+                </article>
+                <!-- Contenedor de producto -->
+                <article class="products">
+                    <div class="product-wrapper">
+                        <img src="/images/img-samsung-galaxy-s10.jpg" alt="s10">
+                        <div class="product-info">
+                            <i class="fas fa-truck ml-green-text truck-icon"></i>
+                            <div class="flex align-center">
+                                <p class="precios">$70.500</p>
+                                <p class="descuentos ml-green-text">10% off</p>
+                            </div>
+                            <p class="descripcion ml-dark-text">Samsung Galaxy s10</p>
+                        </div>
+                    </div>
+                </article>
+                <!-- Contenedor de producto -->
                 <article class="products">
                     <div class="product-wrapper">
                         <img src="/images/img-tv-samsung-smart.jpg" alt="tv-samsung">
