--- a/public/css/utils.css
+++ b/public/css/utils.css
@@ -56,7 +56,7 @@ body {
 
 @media (min-width: 480px) {
     .show-sm {
-        display: initial;
+        display: flex;
     }
     .w-50-sm {
         width: 50%;
